fixed alignment

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -33,7 +33,7 @@ tr{
     width: 50%
 }
 label{
-    color: blueviolet;
+    color: red;
     margin: 10px 10px;
 }
 button{
